--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="C:\Users\ELCOT\Documents\1741965815444.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="IMG-20250326-WA0006.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>V. Priyadarshini </h1>
             <p1>Software developer</p1>
         </div>
