--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ and drive tangible business results.
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="D:\4th sem tamil\V. PRIYADARSHINI  222309763.docx" target="_blank" class="download-button">Download CV</a>
+            <a href="V. Priyadarshini - Resume.docx" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
        
