--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ and drive tangible business results.
        <h2>Certifications</h2>
                        <ul type = "circle">
 <li>Artificial Intelligence & Machine Learning - Global Theoritcal Research</li>
-            <a href="         " target="_blank" class="download-button">Download</a>
+            <a href="AI and ML Certificate.pdf" target="_blank" class="download-button">Download</a>
                         <li>Mobile app development -(Global Theoretical Research)</li>          
         </div>
     </section>
