--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@ and drive tangible business results.
         <div class="section-content">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">Sales Analyse</a></li>
-                <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Chatbot</a></li>
-                <li><a href="#">Registration form</a></li>
+                <li><a href="#">AI power chatbot</a></li>
+                <li><a href="#">To-do list app</a></li>
+                <li><a href="#">Image gallery</a></li>
+                <li><a href="#">Portfolio websites</a></li>
                 <!-- Add more project links here -->
             </ul>
         </div>
