--- a/index.html
+++ b/index.html
@@ -137,13 +137,9 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm a <b>Software developer</b> expert who is passionate for transforming raw data into actionable insights. I excel at
+            <p>I'm a <b>Software developer</b> I must keep learning because technology is always evolving. To stay relevant in the industry, I need to keep updating myself with new programming languages, tools, and best practices.
 
-uncovering patterns and trends through meticulous analysis, utilizing tools like SQL, Python, and data visualization platforms to
-
-deliver clear and compelling narratives. My focus is on providing data-driven solutions that empower informed decision-making
-
-and drive tangible business results.
+I need to think like a problem solver since coding isn’t just about writing syntax. I must develop a logical mindset to find efficient solutions to real-world problems. I want to build useful applications that help users. Whether it’s a website, an app, or a complex system, my goal is to create software that improves daily life.
 .</p>
 
         </div>
