--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ I need to think like a problem solver since coding isn’t just about writing sy
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="V. Priyadarshini - Resume.docx" target="_blank" class="download-button">Download CV</a>
+            <a href="V. Priyadarshini - Resume (2).pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
        
