--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <!-- Add your profile picture here -->
             <img src="IMG-20250326-WA0006.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>V. Priyadarshini </h1>
-            <p1>Software developer</p1>
+            <p1>BSC. Computer Science student</p1>
         </div>
     </header>
 
@@ -137,9 +137,7 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm a <b>Software developer</b> I must keep learning because technology is always evolving. To stay relevant in the industry, I need to keep updating myself with new programming languages, tools, and best practices.
-
-I need to think like a problem solver since coding isn’t just about writing syntax. I must develop a logical mindset to find efficient solutions to real-world problems. I want to build useful applications that help users. Whether it’s a website, an app, or a complex system, my goal is to create software that improves daily life.
+            <p>I'm a <b>Bsc.Computer Science student</b> B.Sc. Computer Science students learn programming languages like C, C++, Java, and Python. They study core subjects like Data Structures, DBMS, and Computer Networks, along with developing problem-solving and logical skills. They work on projects and internships for practical experience. After graduation, they can pursue careers in IT industries or higher studies like MCA, M.Sc. CS, or professional certifications.
 .</p>
 
         </div>
@@ -174,8 +172,8 @@ I need to think like a problem solver since coding isn’t just about writing sy
             <h2>Projects</h2>
             <ul>
                 <li><a href="#">AI power chatbot</a></li>
-                <li><a href="#">To-do list app</a></li>
-                <li><a href="#">Image gallery</a></li>
+                <li><a href="#">Expense tracker</a></li>
+                <li><a href="#">Registration form</a></li>
                 <li><a href="#">Portfolio websites</a></li>
                 <!-- Add more project links here -->
             </ul>
