--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <!-- Add your profile picture here -->
             <img src="IMG-20250326-WA0006.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>V. Priyadarshini </h1>
-            <p1>BSC. Computer Science student</p1>
+            <p1>BSC.Computer Science student</p1>
         </div>
     </header>
 
@@ -137,7 +137,7 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm a <b>Bsc.Computer Science student</b> B.Sc. Computer Science students learn programming languages like C, C++, Java, and Python. They study core subjects like Data Structures, DBMS, and Computer Networks, along with developing problem-solving and logical skills. They work on projects and internships for practical experience. After graduation, they can pursue careers in IT industries or higher studies like MCA, M.Sc. CS, or professional certifications.
+            <p>I'm a <b>Bsc.Computer Science student</b> I learn programming languages like C, C++, Java, and Python. They study core subjects like Data Structures, DBMS, and Computer Networks, along with developing problem-solving and logical skills. They work on projects and internships for practical experience. After graduation, they can pursue careers in IT industries or higher studies like MCA, M.Sc. CS, or professional certifications.
 .</p>
 
         </div>
