--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm a <b>Bsc.Computer Science student</b> I learn programming languages like C, C++, Java, and Python. They study core subjects like Data Structures, DBMS, and Computer Networks, along with developing problem-solving and logical skills. They work on projects and internships for practical experience. After graduation, they can pursue careers in IT industries or higher studies like MCA, M.Sc. CS, or professional certifications.
+            <p>I'm a <b>Bsc.Computer Science student</b> I learn programming languages like C, C++, Java, and Python. I study core subjects like Data Structures along with developing problem-solving and logical skills. I will work on projects and internships for practical experience. After graduation, I can pursue careers in IT industries or higher studies like MCA, M.Sc. CS, or professional certifications.
 .</p>
 
         </div>
